# jabcode

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build-docker.yaml
android_reader/: BarcodeApp.apk  JabCodeApp.apk
doc/: annotated.js  binarizer_8c.html  decoder_8c.js  decoder_8h.html  decoder_8h.js  decoder_8h_source.html  detector_8c.js  detector_8h.html  detector_8h_source.html  encoder_8c.js  encoder_8h.html  encoder_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  image_8c.html  image_8c.js  index.html  interleave_8c.html  jabcode_8h_source.html  ldpc_8c.html  ldpc_8c.js  ldpc_8h.html  ldpc_8h_source.html  mask_8c.html  mask_8c.js  navtreeindex0.js  sample_8c.html  structjab__alignment__pattern-members.html  structjab__alignment__pattern.html  structjab__bitmap-members.html  structjab__code-members.html  structjab__code.html  structjab__data-members.html  structjab__data.js  structjab__decoded__symbol.html  structjab__decoded__symbol.js  (+12 more)
doc/search/: all_2.js  all_4.js  all_7.js  all_8.js  all_a.js  all_b.js  all_f.js  classes_0.js  defines_1.js  enums_0.js  files_1.js  files_2.js  (+14 more)
docs/: annotated.html  binarizer_8c.html  binarizer_8c.js  classes.html  decoder_8c.html  decoder_8c.js  decoder_8h.html  decoder_8h.js  decoder_8h_source.html  detector_8c.html  detector_8c.js  detector_8h.html  detector_8h.js  detector_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  encoder_8c.html  encoder_8c.js  encoder_8h.html  encoder_8h.js  encoder_8h_source.html  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  image_8c.html  index.html  interleave_8c.html  interleave_8c.js  jabcode_8h.html  jabcode_8h.js  jabcode_8h_source.html  ldpc_8c.html  ldpc_8c.js  ldpc_8h.html  ldpc_8h.js  ldpc_8h_source.html  (+42 more)
(+58 files in other folders)
